[gd_scene load_steps=34 format=2]

[ext_resource path="res://assets/sprites/wall.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/funny_poot_game/poot front.PNG" type="Texture" id=2]
[ext_resource path="res://scenes/Spoon.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Spawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/DangerZone.gd" type="Script" id=5]
[ext_resource path="res://scripts/LevelUI.gd" type="Script" id=6]
[ext_resource path="res://scripts/OutZone.gd" type="Script" id=7]
[ext_resource path="res://assets/sprites/bar_bg.png" type="Texture" id=8]
[ext_resource path="res://scenes/ingridients/Ball_Bad_Apple.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/ingridients/Ball_Bad_Banana.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/sprites/bar_progress.png" type="Texture" id=11]
[ext_resource path="res://scripts/Spawner.gd" type="Script" id=12]
[ext_resource path="res://assets/sprites/funny_poot_game/soup2.PNG" type="Texture" id=13]
[ext_resource path="res://assets/sprites/funny_poot_game/soup.PNG" type="Texture" id=14]
[ext_resource path="res://assets/sprites/funny_poot_game/poot back.PNG" type="Texture" id=15]
[ext_resource path="res://assets/sprites/funny_poot_game/ingredients.PNG" type="Texture" id=16]
[ext_resource path="res://scenes/ingridients/Ball_Good_Brokkoly.tscn" type="PackedScene" id=17]
[ext_resource path="res://scenes/ingridients/Ball_Bad_Pizza.tscn" type="PackedScene" id=18]
[ext_resource path="res://scenes/ingridients/Ball_Good_Onion.tscn" type="PackedScene" id=19]
[ext_resource path="res://scenes/ingridients/Ball_Bad_Jar.tscn" type="PackedScene" id=20]
[ext_resource path="res://scenes/ingridients/Ball_Bad_Worm.tscn" type="PackedScene" id=21]
[ext_resource path="res://scenes/ingridients/Ball_Good_Carrot.tscn" type="PackedScene" id=22]
[ext_resource path="res://scenes/ingridients/Ball_Bad_RedMushroom.tscn" type="PackedScene" id=23]
[ext_resource path="res://scenes/ingridients/Ball_Bad_Fly.tscn" type="PackedScene" id=24]
[ext_resource path="res://scenes/ingridients/Ball_Good_Pepper.tscn" type="PackedScene" id=25]
[ext_resource path="res://scenes/ingridients/Ball_Bad_Soks.tscn" type="PackedScene" id=26]
[ext_resource path="res://scenes/ingridients/Ball_Bad_Fish_head.tscn" type="PackedScene" id=27]
[ext_resource path="res://assets/font/score_font.tres" type="DynamicFont" id=28]
[ext_resource path="res://assets/music/2020-03-22_-_8_Bit_Surf_-_FesliyanStudios.com_-_David_Renda.mp3" type="AudioStream" id=29]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 34.5, 84.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 516, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 370.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 103, 9.5 )

[node name="World" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="WallSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="CauldronSpriteBack" type="Sprite" parent="."]
position = Vector2( 116, 445 )
texture = ExtResource( 15 )
centered = false

[node name="CauldronSpriteSpoupBack" type="Sprite" parent="CauldronSpriteBack"]
position = Vector2( 130, 113 )
texture = ExtResource( 14 )
centered = false

[node name="CauldronSpriteIngridients" type="Sprite" parent="CauldronSpriteBack"]
position = Vector2( 181, 108 )
texture = ExtResource( 16 )
centered = false

[node name="CauldronSpriteSpoupFront" type="Sprite" parent="CauldronSpriteBack"]
position = Vector2( 170, 134 )
texture = ExtResource( 13 )
centered = false

[node name="CauldronSpriteFront" type="Sprite" parent="CauldronSpriteBack"]
position = Vector2( -119, 104 )
texture = ExtResource( 2 )
centered = false

[node name="Spoon" parent="." instance=ExtResource( 3 )]

[node name="Wall" type="StaticBody2D" parent="."]
position = Vector2( 164, 620 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
position = Vector2( -5.5, 0 )
shape = SubResource( 2 )

[node name="Wall2" type="StaticBody2D" parent="."]
position = Vector2( 1111, 635 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall2"]
position = Vector2( 9, 10.5 )
shape = SubResource( 2 )

[node name="Spawner" parent="." instance=ExtResource( 4 )]
path_ball_nodes = [ ExtResource( 9 ), ExtResource( 22 ), ExtResource( 10 ), ExtResource( 26 ), ExtResource( 23 ), ExtResource( 18 ), ExtResource( 17 ) ]

[node name="Spawner2" type="Position2D" parent="."]
position = Vector2( 1287, 218 )
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true,
"_gizmo_extents_": 135.0
}
path_ball_nodes = [ ExtResource( 21 ), ExtResource( 19 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 20 ), ExtResource( 24 ), ExtResource( 27 ) ]

[node name="Direction" type="Position2D" parent="Spawner2"]
position = Vector2( -90, -77 )
__meta__ = {
"_gizmo_extents_": 87.4
}

[node name="SpawnTimer" type="Timer" parent="Spawner2"]
wait_time = 2.0
autostart = true

[node name="DangerZone" type="Area2D" parent="."]
position = Vector2( 652, 650 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DangerZone"]
position = Vector2( -22, 1 )
shape = SubResource( 3 )

[node name="OutZone" type="Area2D" parent="."]
position = Vector2( 1473, 354 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutZone"]
position = Vector2( 3, 2.5 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="OutZone"]
position = Vector2( -90, 363.5 )
shape = SubResource( 5 )

[node name="OutZone2" type="Area2D" parent="."]
position = Vector2( -194, 353 )
scale = Vector2( -1, 1 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutZone2"]
position = Vector2( 3, 2.5 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="OutZone2"]
position = Vector2( -90, 363.5 )
shape = SubResource( 5 )

[node name="LevelUI" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 6 )

[node name="MarginContainer" type="MarginContainer" parent="LevelUI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ProgressBar" type="TextureProgress" parent="LevelUI/MarginContainer"]
margin_left = 512.0
margin_right = 768.0
margin_bottom = 720.0
size_flags_horizontal = 4
value = 50.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 11 )

[node name="BadLabel" type="Label" parent="LevelUI/MarginContainer"]
visible = false
margin_left = 168.0
margin_top = 321.0
margin_right = 1111.0
margin_bottom = 399.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 0.223529, 0.301961, 0.788235, 1 )
custom_fonts/font = ExtResource( 28 )
text = "Oh... it's impossible to eat
   press Space to restart"
align = 1

[node name="GoodLabel" type="Label" parent="LevelUI/MarginContainer"]
visible = false
margin_left = 148.0
margin_top = 321.0
margin_right = 1131.0
margin_bottom = 399.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 0.223529, 0.301961, 0.788235, 1 )
custom_fonts/font = ExtResource( 28 )
text = "OMG! This is soup for gods!
      press Space to restart"
align = 1

[node name="Tutur" type="Label" parent="LevelUI/MarginContainer"]
margin_left = 109.0
margin_top = 321.0
margin_right = 1170.0
margin_bottom = 399.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 0.223529, 0.301961, 0.788235, 1 )
custom_fonts/font = ExtResource( 28 )
text = "Move the scoop with A D keys"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 29 )
volume_db = -15.307
autoplay = true
